doc: add section about how to build and deploy the SB with java version 9 or higher